			   XPCE ChangeLog
			   ==============

* FIXED: seek issues on streams created from XPCE objects.

* FIXED: integer return values of prolog defined methods incorrectly mapped
  to XPCE floats.

* ADDED: `text_buffer->iso_latin_1' to see whether text can be expressed in
  ISO Latin-1.

* FIXED: Avoid BadAtom errors on X_GetAtomName when getting the X11 selection.


VERSION 6.5.7, distributed with SWI-Prolog 5.5.7
================================================

* ADDED: PceEmacs: ->insert_character_by_code to interactively insert a
  character by entering its numeric UNICODE value.

* FIXED: wide character support for `editor->insert_self' and `editor->
  transpose' and editor undo management.

* ADDED: (very simple) make check

* FIXED: frame->geomtry for transient frames (MS-Windows).  Holger Kanwischer.

* FIXED: PceEmacs crash on `revert-buffer'.  Pierpaolo Bernardi.


VERSION 6.5.6, distributed with SWI-Prolog 5.5.6
================================================

* FIXED: Bug#14: image->pixel for <-kind = bitmap. Holger Kanwischer.

* FIXED: omitted close in text_buffer->insert, introduced in 5.5.3.

* FIXED: Bug#11: crash on text objects with more than 200 lines.
  Holger Kanwischer.


VERSION 6.5.5, distributed with SWI-Prolog 5.5.5
================================================

* FIXED: Using text-buffer for binary I/O.  Fixes
  send(Image, save, TextBuffer, jpeg), etc. (bug introduced with wide
  characters).

* FIXED: Bug#7: Get rid of maximum rows/columns in a dialog window (used
  to be 100/100).  Holger Kanwischer.


VERSION 6.5.4, distributed with SWI-Prolog 5.5.4
================================================

* FIXED: X11 error in text-metric computation, notably showing up when
  positioning the caret in text-items.

* ENHANCED: some cleanup and more robustness in library(Xserver) to create
  a head-less server for XPCE.

* FIXED: Crash in wrapped text objects.  Caused by incompatible change in